fix: The form label of type ReactNode is not center aligned

--- a/packages/semi-foundation/form/form.scss
+++ b/packages/semi-foundation/form/form.scss
@@ -78,7 +78,8 @@ $rating: #{$prefix}-rating;
         font-weight: $font-form_label-fontWeight;
         color: $color-form_label-text-default;
         margin-bottom: $spacing-form_label-marginBottom;
-        display: inline-block;
+        display: flex;
+        align-items: center;
         vertical-align: middle;
         @include font-size-regular;
         flex-shrink: 0;
@@ -91,7 +92,7 @@ $rating: #{$prefix}-rating;
         &-with-extra {
             .#{$field}-label-text,
             .#{$field}-label-extra {
-                display: inline-block;
+                display: flex;
             }
             .#{$field}-label-extra {
                 margin-left: $spacing-form_label_extra-marginLeft;
